revised block element

--- a/abd.html
+++ b/abd.html
@@ -229,6 +229,9 @@ div.tocify {
 
 <p><link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"></p>
 <div class="rmdcomment">
+<p>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+</p>
 <h2 id="what-you-need-to-know">
 <strong>WHAT YOU NEED TO KNOW</strong>
 </h2>
