--- a/thresholds.html
+++ b/thresholds.html
@@ -237,12 +237,12 @@ div.tocify {
 <strong>WHAT YOU NEED TO KNOW</strong>
 </h2>
 <p>
-<strong>There are new tools available in the Data Explorer under Habitat and Oceanographic Drivers, Productivity, Biodiversity, Abundance, Vulnerability, and Rarity in the Data Explorer</strong>
+<strong>There are new data and tools available in the Data Explorer under Habitat and Oceanographic Drivers, Productivity, Biodiversity, Abundance, Vulnerability, and Rarity in the Data Explorer</strong>
 </p>
 <ul>
 <li>
 <p>
-Threshold products are new data layers that are calculated using a percentile method to represent the top 50%, 25%, and 10% of original data product. Threshold products allow users to visualize the subsets in addition to or separately from the original data, or any other dataset or threshold product.
+Threshold products are new data layers that are calculated using a percentile method to represent the top 50%, 25%, and 10% of the original data product. Threshold products can be visualized in addition to or separately from any other dataset or threshold product.
 </p>
 </li>
 <li>
@@ -326,14 +326,14 @@ Time options are available for layers with monthly or seasonal data.
 <h3>What are threshold products and time options?</h3>
 <p>Threshold products are new data layers that represent a subset of an original data product. Threshold products allow users to visualize the subset in addition to or separately from the original data, or any other dataset or threshold product.</p>
 <p>Time options differ between marine life layers and habitat and oceanographic data layers (see more below).</p>
-<p>Threshold products were calculated for the annual averages (if available) and for each season (if available) or month (if available).</p>
+<p>Threshold products were calculated for the annual averages (if available) and for each season (if available) or month (if available) of the original data.</p>
 <div id="marine-life-data-time-options" class="section level4">
 <h4>Marine life data time options</h4>
-<p>Marine life individual species products have been developed at monthly resolution (cetaceans) and seasonal resolution (birds). Species group products were summarized to represent annual averages of these individual species products. Now, new marine life abundance products have been developed at monthly (for cetaceans) and seasonal (for birds) scales to show how species group abundance changes over time.</p>
+<p>Marine life individual species products were developed at monthly resolution (cetaceans) and seasonal resolution (birds). Fish data products are currently available for Fall only. Species group products were summarized to represent annual averages of these individual species products. For fish, summary products use fall data only. Now, new marine life abundance products have been developed at monthly (for cetaceans) and seasonal (for birds) scales to show how species group abundance changes over time.</p>
 </div>
 <div id="habitat-and-oceanographic-data-time-options" class="section level4">
 <h4>Habitat and oceanographic data time options</h4>
-<p>Habitat and oceanographic data have previously been shown with seasonal resolution if the data existed (e.g., Median Chlorophyll-a Concentrations). Now, time option tools allow users to visualize these layers in sequence.</p>
+<p>Habitat and oceanographic data have previously been shown with seasonal resolution based on data availability (e.g., Median Chlorophyll-a Concentrations). Now, time option tools allow users to visualize these layers in sequence.</p>
 <hr />
 </div>
 </div>
@@ -362,23 +362,23 @@ Examples of the three threshold products. From left to right, the top 50%, 25%, 
 <h4>Spatial extent</h4>
 <p>Thresholds were applied at the full spatial extent of each original data layer.</p>
 <p><details> <summary> <strong>Additional information and considerations</strong> </summary></p>
-<p><strong>For some datasets, the range of values is expected to differ depending on spatial extent. For example, Habitat Complexity values are much higher around seamounts and canyons than coastal and shelf environments. Therefore, threshold products will always highlight canyon and seamount areas while areas of high relative habitat complexity near the coast and on the shelf will be less obvious. One option to address this issue would be to segment the data into nearshore and offshore areas and calculate thresholds on those separate subsets.</strong></p>
-<p><strong>If the original data were clipped to a particular study area or region, the area highlighted by threshold products would be different. In this example, the resulting threshold products would only represent the top 10% of the original data <em>in that study area or region</em> and would not be comparable to thresholds calculated for the full extent of the data or for any other study area or region.</strong></p>
+<p><strong>For some datasets, the range of values is expected to differ depending on spatial extent. For example, Habitat Complexity values are much higher around seamounts and canyons than coastal and shelf environments. Therefore, threshold products will always highlight canyon and seamount areas while areas of high relative habitat complexity near the coast and on the shelf will be less obvious in these maps. One option to address this issue is to segment the data into nearshore and offshore areas and calculate thresholds on those separate geographies.</strong></p>
+<p><strong>If the original data were clipped to display a particular study area or region, the resulting areas highlighted by threshold products would be different from areas highlighted when the full extent of the data is considered. For a clipped study area, the resulting threshold products would only represent the top 10% of the original data <em>in that study area or region</em>, for example, and would not be comparable to areas derived from thresholds calculated for the full extent of the data, or for any other study area or region.</strong></p>
 <p></details></p>
 <hr />
 </div>
 </div>
 <div id="which-data-products-have-associated-threshold-products" class="section level3">
 <h3>Which data products have associated threshold products?</h3>
-<p>Thresholds were calculated only for data products in the Habitat and Oceanographic Drivers, Productivity, Biodiversity, Abundance, Vulnerability, and Rarity folders that represent components of ecological importance. In order to calculate thresholds, original data products needed to be continuous rasters. Threshold products were not generated for data products that represent areas or categories such as Canyons or Critical Habitat.</p>
+<p>Thresholds were calculated only for data products in the Habitat and Oceanographic Drivers, Productivity, Biodiversity, Abundance, Vulnerability, and Rarity folders that represent components of ecological importance. In order to calculate thresholds, original data products needed to be continuous rasters. Aside from Habitat and Oceanographic Drivers, thresholds were calcualted mainly from abundance products. Threshold products were not generated for data products that represent areas or categories such as Canyons or Critical Habitat.</p>
 <p>Threshold products were developed for every available month or season associated with an original data layer.</p>
 <p><details> <summary> <strong>Additional information and considerations</strong> </summary></p>
 <p><strong>Threshold products were not calculated for the following products:</strong></p>
 <ul>
 <li><p><em>Species Richness</em> - from a statistical perspsective, these layers are more similar to categorical data. Initial tests of thresholds applied to these products generated confusing results.</p></li>
-<li><p><em>Simpson and Shannon Diversity Indices</em> - because the numerical value of these indices does not have absolute meaning, thresholds were not applied to these products. Initial tests of thresholds applied to these products generated results that were difficult to interpret.</p></li>
+<li><p><em>Simpson and Shannon Diversity Indices</em> - because the numerical value of these indices does not have an easily interpreted absolute meaning, thresholds were not applied to these products. Initial tests of thresholds applied to these products generated results that were difficult to interpret.</p></li>
 </ul>
-<p><strong>For some original data products with large numbers of zeroes, some of the threshold products include large numbers of zeroes. For the following datasets, the 50% threshold therefore displays as the full extent of the data: </strong></p>
+<p><strong>For original data products with large numbers of zeroes, some of the areas highlighted by threshold products include large numbers of zeroes. For the following datasets, the 50% threshold layer therefore displays as the full extent of the data: </strong></p>
 <ul>
 <li>Anticyclonic eddy probability winter, spring summer</li>
 </ul>
